--- a/bower.json
+++ b/bower.json
@@ -2,24 +2,24 @@
   "name": "coveo-frontend-challenge",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.15",
-    "json3": "~3.2.6",
-    "es5-shim": "~2.1.0",
-    "jquery": "~1.11.0",
+    "angular": "1.5.0",
+    "json3": "~3.3.2",
+    "es5-shim": "~4.5.7",
+    "jquery": "~2.2.1",
     "bootstrap": "~3.0.3",
-    "angular-resource": "1.2.15",
-    "angular-cookies": "1.2.15",
-    "angular-sanitize": "1.2.15",
-    "angular-route": "1.2.15",
+    "angular-resource": "1.5.0",
+    "angular-cookies": "1.5.0",
+    "angular-sanitize": "1.5.0",
+    "angular-route": "1.5.0",
     "restangular": "^1.5.2",
     "font-awesome": "^4.5.0",
     "animate.css": "animate-css#^3.5.1",
     "wow": "wowjs#^1.1.2",
-    "angular-elastic-grid": "^1.0.4"
+    "angular-elastic-grid": "^1.0.4",
+    "angular-bootstrap": "^1.2.3"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.15",
-    "angular-scenario": "1.2.15",
-    "bootstrap-ui": "^1.2.1"
+    "angular-mocks": "1.5.0",
+    "angular-scenario": "1.5.0"
   }
 }
