--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-google-cdn": "~0.2.0",
+    "grunt-karma": "^0.12.1",
     "grunt-newer": "~0.6.1",
     "grunt-ngmin": "~0.0.2",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
+    "jasmine-core": "^2.4.1",
     "jshint-stylish": "~0.1.3",
+    "karma": "^0.13.21",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0",
     "load-grunt-tasks": "~0.4.0",
+    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.4",
     "time-grunt": "~0.2.1"
   },
   "engines": {
